--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
-.App {
-  text-align: center;
+.form-container {
+    display: flex;
+    height: 100vh;
+}
+.card-container {
+    margin: auto;
+    width: 50%;
+    border-radius: 2% !important;
 }
