--- a/src/App.css
+++ b/src/App.css
@@ -34,8 +34,14 @@ a {
     height: 200px;
 }
 
-/* @media(max-width: 600px) {
-   .card-layout {
-
-   }
-} */
+ @media(max-width: 600px) {
+  .navbar h3{
+      font-size: x-large
+  }
+  a svg {
+      font-size:  40px !important;
+  }
+  .navbar-nav a svg{
+    font-size: 20px !important;
+  }
+} 
