added success message to new blog page, fixed, and post page

--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@
 .add-btn {
     background-Color:#4CAF50 !important;
     border: none !important;
+    margin-bottom: 1rem;
 }
 a {
     color: 'grey' !important;
